--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fhevm-hardhat-template",
+  "name": "rememberpass",
   "description": "Hardhat-based template for developing FHEVM Solidity smart contracts",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "engines": {
     "node": ">=20",
     "npm": ">=7.0.0"
